-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 15, 17, 18, 19
-
Component/s: client-libs
-
b24
-
x86_64
-
windows_10
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8296859 | 17.0.6 | Goetz Lindenmaier | P3 | Resolved | Fixed | b03 |
| JDK-8290843 | 17.0.5-oracle | Alexey Ivanov | P3 | Resolved | Fixed | b04 |
| JDK-8291740 | 17.0.4.0.1-oracle | Alexey Ivanov | P3 | Closed | Fixed | b01 |
| JDK-8296862 | 11.0.18 | Goetz Lindenmaier | P3 | Resolved | Fixed | b03 |
| JDK-8290980 | 11.0.17-oracle | Alexey Ivanov | P3 | Resolved | Fixed | b04 |
windows 10
java 15
A DESCRIPTION OF THE PROBLEM :
In Windows when you change desktop scaling the tray icons seem to blur a bit each time scaling changes.
STEPS TO FOLLOW TO REPRODUCE THE PROBLEM :
Place icon in system tray in Java app.
Change scaling in Windows 10
EXPECTED VERSUS ACTUAL BEHAVIOR :
EXPECTED -
Icons do not blur
ACTUAL -
Icons blur
---------- BEGIN SOURCE ----------
Any app with tray icon.
---------- END SOURCE ----------
CUSTOMER SUBMITTED WORKAROUND :
Remove/re-add tray icon.
- backported by
-
JDK-8290843 System Tray icons get corrupted when Windows scaling changes
-
- Resolved
-
-
JDK-8290980 System Tray icons get corrupted when Windows scaling changes
-
- Resolved
-
-
JDK-8296859 System Tray icons get corrupted when Windows scaling changes
-
- Resolved
-
-
JDK-8296862 System Tray icons get corrupted when Windows scaling changes
-
- Resolved
-
-
JDK-8291740 System Tray icons get corrupted when Windows scaling changes
-
- Closed
-
- relates to
-
JDK-8305645 System Tray icons get corrupted when Windows primary monitor changes
-
- Resolved
-
-
JDK-8327924 Simplify TrayIconScalingTest.java
-
- Resolved
-
-
JDK-8286838 SendTrayMessage(NIM_ADD) returns failure in AwtTrayIcon::WmTaskbarCreated
-
- Closed
-
-
JDK-8323977 TrayIcon notifications show corrupted icon after DPI changes
-
- Open
-
-
JDK-8259913 AWT menu items are not scaled correctly on Windows HiDPI displays
-
- In Progress
-
- links to
-
Commit
openjdk/jdk11u-dev/338f9af9
-
Commit
openjdk/jdk17u-dev/cd4cc5d6
-
Commit
openjdk/jdk/8323787c
-
Review
openjdk/jdk11u-dev/1511
-
Review
openjdk/jdk17u-dev/866
-
Review
openjdk/jdk/8441