8255439: System Tray icons get corrupted when windows scaling changes

Co-authored-by: Alexey Ivanov <aivanov@openjdk.org>
Reviewed-by: kcr, prr, aivanov